--- a/src/styles/modal.css
+++ b/src/styles/modal.css
@@ -8,25 +8,18 @@ body:has(dialog.policyModal--content[open]) {
 }
 
 .policyModal--content {
-  /* margin: 0; */
   height: 100%;
   width: 100%;
   position: fixed;
-  /* background: var(--color-cream-light); */
-  /* overflow: auto; */
-  /* WebkitOverflowScrolling: touch; */
   outline: none;
-
-  /* border-radius: 0; */
   border-top-left-radius: 10px;
   left: 8px;
   right: 0;
   top: 3px;
   bottom: 0;
   max-height: none;
-  /* overflow: auto; */
-  /* max-width: auto; */
   border: none;
+  border-radius: 0;
 }
 
 .policyModal--open {
@@ -284,7 +277,6 @@ body:has(dialog.policyModal--content[open]) {
     left: 0;
     max-height: min(600px, calc(90vh - 10%));
     max-width: 1000px;
-    /* background: #303030; */
     overflow: hidden;
     transition: transform .2s cubic-bezier(.59,.06,.61,1.3); /*or cubic-bezier(.4,0,.5,1.4)*/
     display: block;
@@ -292,7 +284,6 @@ body:has(dialog.policyModal--content[open]) {
     visibility: hidden;
     position: fixed;
     border: none;
-    border-radius: 8px;
     box-shadow: 0px 15px 30px rgba(0, 0, 0, 0.2);
 
     &.policyModal--visible {
@@ -304,6 +295,7 @@ body:has(dialog.policyModal--content[open]) {
   .policyReferenceModal--content {
     max-width: 570px;
     height: fit-content;
+    min-height: 300px;
     min-width: 40%;
     overflow-y: auto;
   }
@@ -430,5 +422,11 @@ body:has(dialog.policyModal--content[open]) {
 
   .policyModal--Green::backdrop {
     background-color: rgba(61, 155, 53, 0.9);
+  }
+}
+
+@media screen and (min-width: 1000px) {
+  .policyModal--content {
+    border-radius: 8px;
   }
 }
